--- a/css/styles.css
+++ b/css/styles.css
@@ -876,6 +876,7 @@ main #bookcase-empty::after {
   opacity: 0;
   position: absolute;
   transition: all 222ms ease-in-out;
+  z-index: -1;
 }
 
 main #bookcase-empty p {
