--- a/css/styles.css
+++ b/css/styles.css
@@ -191,7 +191,7 @@ header {
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 header :focus {
@@ -388,9 +388,9 @@ main #controls-wrapper {
 }
 
 main #controls {
-  background-color: var(--color-primary);
-  border: 3px solid var(--color-primary);
-  box-shadow: inset 0 -3px 15px var(--color-secondary);
+  background: linear-gradient(145deg, #ffffeb, #e6dfc6);
+  box-shadow: inset 5px 5px 9px #d4ceb7,
+              inset -5px -5px 9px #ffffff;
   border-radius: 75px;
 	display: flex;
   flex-direction: column;
@@ -398,6 +398,23 @@ main #controls {
   max-width: 100%;
   margin-inline: auto;
   padding: 20px 45px;
+  position: relative;
+  z-index: 1;
+}
+
+main #controls:hover::before {
+  opacity: 0.5;
+}
+
+main #controls::before {
+  border-radius: inherit;
+  box-shadow: inset 0 0 15px var(--color-secondary);
+  content: '';
+  position: absolute;
+  opacity: 0;
+  inset: 0;
+  transition: opacity 380ms ease-in-out;
+  z-index: 0;
 }
 
 main #controls #controls-top {
@@ -405,9 +422,10 @@ main #controls #controls-top {
   justify-content: space-evenly;
   display: flex;
   gap: 25px;
+  z-index: 0;
 }
 
-main #controls #open-dialog-btn {
+main #controls #modal-open-btn {
   background-color: var(--color-secondary);
   border-radius: 50%;
   border: 2px solid black;
@@ -769,6 +787,7 @@ main #controls .custom-select {
 	border-radius: 25px;
 	position: relative;
 	width: 125px;
+  z-index: 0;
 }
 
 main #controls .custom-select select {
@@ -803,10 +822,6 @@ main #controls .select-selected.select-arrow-active:after {
   top: 15px;
 }
 
-main #controls .select-items {
-	border-radius: 25px;
-}
-
 /* ? Style the items (options), including the selected item: */
 main #controls .select-items li,
 main #controls .select-selected {
@@ -819,7 +834,7 @@ main #controls .select-selected {
 
 main #controls .select-items li {
 	border: 1px solid transparent;
-	border-color: transparent transparent rgba(0, 0, 0, 0.5) transparent;
+	border-color: transparent transparent rgba(0, 0, 0, 0.5) transparent; 
 }
 
 main #controls .select-items li:last-child {
@@ -878,6 +893,21 @@ main #bookcase {
   padding-block: 25px;
   padding-inline: 3vw;
   position: relative;
+}
+
+main #bookcase:hover::before {
+  opacity: 0.5;
+}
+
+main #bookcase::before {
+  border-radius: inherit;
+  box-shadow: inset 0 0 25px var(--color-secondary);
+  content: '';
+  inset: 0;
+  opacity: 0;
+  position: absolute;
+  transition: opacity 380ms ease-in-out;
+  z-index: 0;
 }
 
 /* * add .emmpty class for when there are no books, and remove it when there are books main #bookcase.empty::before */
@@ -966,7 +996,6 @@ main #bookcase-empty .add-symbol {
 }
 
 main #bookcase .book-card {
-  /* border: 2px solid #724b3f; */
   background: linear-gradient(145deg, #ffffeb, #e6dfc6);
   border-radius: 25px;
   box-shadow:  5px 5px 12px #a8a491,
@@ -977,6 +1006,28 @@ main #bookcase .book-card {
   justify-content: center;
   min-width: 275px;
   padding: 15px 25px;
+  position: relative;
+  transition: all 380ms ease-in-out;
+  z-index: 0;
+}
+
+main #bookcase .book-card:hover::before {
+  opacity: 0.5;
+} 
+
+main #bookcase .book-card::before {
+  border-radius: inherit;
+  box-shadow: 10px 10px 25px -10px var(--color-secondary);
+  content: '';
+  inset: 0;
+  opacity: 0;
+  position: absolute;
+  transition: opacity 380ms ease-in-out;
+  z-index: -1;
+}
+
+main #bookcase .book-card:hover {
+  transform: scale(1.02);
 }
 
 /* ! fix  */
