--- a/css/styles.css
+++ b/css/styles.css
@@ -213,14 +213,39 @@ header #header-left {
 }
 
 header #header-left #header-logo {
+  cursor: pointer;
   font-family: 'Cyclone', monospace;
 	font-size: 2.5rem;
 	padding-bottom: 7px;
+  position: relative;
+}
+
+header #header-left #header-logo::before {
+  color: var(--color-primary);
+  content: 'midreads';
+  opacity: 0;
+  position: absolute;
+  inset: 0;
+  transform: scale(0);
+  transition: all 555ms ease-in-out;
+}
+
+header #header-left #header-logo:hover::before {
+  opacity: 1;
+  transform: scale(1);
+}
+
+header #header-left #header-logo:hover a {
+  opacity: 0;
+  transform: scale(1.5);
 }
 
 header #header-left #header-logo a {
   color: var(--color-primary);
+  display: inline-block;
   text-decoration: none;
+  transform: scale(1);
+  transition: all 555ms ease-in-out;
 }
 
 header #header-left #menu-btn {
